samples/_failures_safe/1761434137_1d4666_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc052d92.c: In function ‘main’:
./samples/SAFE/__tmp_dc052d92.c:127:16: error: expected ‘;’ at end of input
  127 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_dc052d92.c:127:9: error: expected declaration or statement at end of input
  127 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_dc052d92.c:127:9: error: expected declaration or statement at end of input
